fixed overflow on x axis when animating

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,10 +6,6 @@
   padding: 0;
 }
 
-body {
-  overflow-x: hidden;
-}
-
 html {
   scroll-behavior: smooth;
 }
